# moses-fs

./: .gitignore  README.md  download_model.sh  pyproject.toml
moses/: cli.py  memory_guard.py
moses/cognition/: classifier.py  multiplexer.py
moses/indexing/: embeddings.py  retrieval.py  vector_store.py
moses/ingestion/: dedup.py  triage.py  watchdog_service.py
